# dag-service

./: .gitignore  Dockerfile  README.md  devtools-test-task.md  docker-compose.yaml  main.py  pyproject.toml  script.sh  test.sh
.github/workflows/: main.yml
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
src/api/endpoints/: __init__.py  graph.py
src/crud/: graph.py
src/db/: session.py
src/models/: graph.py
src/schemas/: graph.py
tests/: conftest.py  test_crud.py  test_endpoints.py
