[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["n.bakhilin <bahilinnikita04@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pytest = "^8.3.4"
pydantic = "^2.11.3"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^6.1.1"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"